foreignKey(연관 관계) student<->Class, Controller, Validate